Revision history for DBD-Cassandra

0.21    unreleased

      * Finish the st handle slightly earlier: when we actually read the last row
      * Add a very basic readline-based plcqlsh implementation for machines without Java

0.20    2015/09/14

      * Timeuuid/uuid support

0.19    2015/09/09

      * Performance improvements

0.18    2015/09/07

      * Fix an issue where executing more than 32767 queries may break the driver

0.17    2015/09/07

      * Support for asynchronous queries
      * Drop 'retries' which was a bad idea

0.16    2015/09/03

      * When running with "perl -l", the driver now actually works

0.15    2015/08/11

      * Support for pagination through result sets
      * careful: Timestamps are now in msec accuracy instead of having them as floating points
      * Enable TCP keepalive on sockets

0.14    2015/05/19

      * Resolve an old bug where connecting to CQL3 might cause compilation errors
      * Fix an issue where the consistency ONE was treated as LOCAL_ONE

0.13    2015/05/06

      * Avoid uninitialized value warnings when the connection goes away
      * Fix an issue where data was corrupted during reading

0.12    2015/04/30

      * Support for read/write/connect timeouts

0.11    2015/04/28

      * Patch a DBI warning that occurs when we drop an implicitly disconnected handle
      * Allow automatically retrying in case of timeouts (opt-in)

0.10    2015/04/22

      * Disable Nagle's algorithm, for a nice performance boost
      * Implement ping() to check whether we're still connected

0.09    2015/04/20

      * Avoid double-encoding UTF-8 strings when passed in without the right flags
      * Automatically prune the prepare() cache to avoid memory leaks
      * Add support for the 'TIMESTAMP' type
      * Boolean types are now actually inserted as booleans

0.08    2015/04/17

      * Avoid causing trouble when disconnecting an inactive handle
      * Cache any prepare()'d statement for 60 seconds