@@ -12,7 +12,7 @@ my %lookup= (
     2  => [\&p2c_bigint, \&c2p_bigint,      'TYPE_BIGINT'],
     3  => [\&p2c_string, \&c2p_string,      'TYPE_BLOB'],
     4  => [\&p2c_bool,   \&c2p_bool,        'TYPE_BOOLEAN'],
-    5  => [\&not_impl,   \&not_impl,        'TYPE_COUNTER'],
+    5  => [\&p2c_bigint, \&c2p_bigint,      'TYPE_COUNTER'],
     6  => [\&not_impl,   \&not_impl,        'TYPE_DECIMAL'],
     7  => [\&p2c_double, \&c2p_double,      'TYPE_DOUBLE'],
     8  => [\&p2c_float,  \&c2p_float,       'TYPE_FLOAT'],
