@@ -4,6 +4,7 @@ Revision history for DBD-Cassandra
 
       * Finish the st handle slightly earlier: when we actually read the last row
       * Add a very basic readline-based plcqlsh implementation for machines without Java
+      * Support for the 'counter' data type
 
 0.20    2015/09/14
 
